# plateFlow

./: CMakeLists.txt  README.md  icons.qrc
geometry/: ConcurrentPool.h  floemesh.cpp  floemesh.h  mesh.cpp  mesh.h  node.cpp  node.h
geometry/elements/: element.cpp  element.h
gui/: main.cpp
gui/vtk/: meshrepresentation.cpp  meshrepresentation.h
gui/windows/: mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/worker/: backgroundworker.cpp  backgroundworker.h
model/: model.cpp  model.h  modelstepinfo.cpp  modelstepinfo.h  parameters_sim.cpp  parameters_sim.h  paramswrapper.cpp  paramswrapper.h
sample_meshes/: g10.msh  g100.msh  g100.tess
solver/: equationofmotionsolver.cpp  equationofmotionsolver.h
